[package]
name = "chrozone"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ed25519-dalek = "2.1"
env_logger = { version = "0.11", default-features = false }
hashbrown = "0.14"
hex = "0.4"
http-body-util = "0.1.0"
hyper = { version = "1.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.1", features = ["tokio"] }
jiff = "0.1"
log = "0.4"
textdistance = "1.0"
tokio = { version = "1.27", features = ["net", "rt-multi-thread"] }
twilight-model = "0.15"

[dependencies.serde_json]
version = "1"
default-features = false
features = ["alloc"]

[profile.release]
lto = true
strip = true
