[package]
name = "chrozone"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.91"
ed25519-dalek = "2.1.1"
env_logger = { version = "0.11.5", default-features = false }
hex = "0.4.3"
http-body-util = "0.1.2"
hyper = { version = "1.5", features = ["http1", "server"] }
hyper-util = { version = "0.1.9", features = ["tokio"] }
jiff = "0.2.11"
log = "0.4.22"
textdistance = "1.1"
tokio = { version = "1.41", features = ["net", "rt-multi-thread"] }
twilight-model = "0.16.0"

[dependencies.hashbrown]
version = "0.16"
default-features = false
features = ["default-hasher", "inline-more"]

[dependencies.serde_json]
version = "1.0.132"
default-features = false
features = ["alloc"]

[profile.release]
lto = true
strip = true
